4.8 trying to fix naviconspacing

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   margin: 0;
   padding: 0;
   position: relative;
+  background: #d0d0d0;
 }
 
 .loading-overlay {
