--- a/src/components/SequentialQuestionScreen.css
+++ b/src/components/SequentialQuestionScreen.css
@@ -2,7 +2,7 @@
   min-height: 100dvh;
   width: 100vw;
   background: #d0d0d0;
-  padding: 20px;
+  padding: 6px 20px 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -14,8 +14,8 @@
   display: flex;
   justify-content: center;
   gap: 20px;
-  margin-bottom: 40px;
-  margin-top: 20px;
+  margin-bottom: 24px;
+  margin-top: -175px;
 }
 
 .nav-icon {
@@ -67,7 +67,7 @@
   line-height: 1.6;
   text-align: center;
   font-family: var(--font-primary);
-  margin: 0;
+  margin-top: 0px;
   color: #333333;
 }
 
@@ -217,7 +217,7 @@
 
   .question-content-wrapper {
     flex: 0;
-    margin-top: 40px;
+    margin-top: 60px;
   }
 }
 
